# IsTheKegEmpty

./: .gitignore  README.md
cad/: Scale.FCStd  Scale.blend
src/apple/IsTheKegEmpty/: ApiClient.swift  AuthVM.swift  ContentView.swift  InventoryVM.swift  IsTheKegEmptyApp.swift  KegView.swift  NewKegView.swift
src/apple/IsTheKegEmpty.xcodeproj/: project.pbxproj
src/apple/IsTheKegEmpty/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/apple/IsTheKegEmpty/Assets.xcassets/lock.imageset/: Contents.json
src/apple/IsTheKegEmptyTests/: IsTheKegEmptyTests.swift
src/apple/IsTheKegEmptyUITests/: IsTheKegEmptyUITests.swift  IsTheKegEmptyUITestsLaunchTests.swift
src/arduino/hx711_test/: hx711_test.ino
src/arduino/scale/: arduino_secrets.h  scale.ino
src/arduino/sensor/: sensor.ino
src/pi_pico/: Cargo.toml
src/pi_pico/src/: main.rs
src/sensor/: Cargo.toml  rust-toolchain.toml
src/sensor/.cargo/: config
src/sensor/src/: client.rs  main.rs
src/web/: app.py  build_venv.sh  is_the_keg_empty.py  requirements.txt  setup.py
src/web/css/: site.css  unauth_style.css
src/web/html/: 404.html  index.html
